--- a/front end/html-css parte-4 avançando no css/contato.html
+++ b/front end/html-css parte-4 avançando no css/contato.html
@@ -1,114 +1,87 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Contato - Barbearia Alura</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Produtos - Barbearia Alura</title>
-  <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css" />
-</head>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 
-<body>
-  <header>
-    <div class="caixa">
-      <h1><img src="img/logo.png" alt="logo" /></h1>
-      <nav>
-        <ul>
-          <a href="index.html">
-            <li>Home</li>
-          </a>
-          <a href="produtos.html">
-            <li>Produtos</li>
-          </a>
-          <a href="contato.html">
-            <li>contato</li>
-          </a>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <form>
-      <label for="nomesobrenome">Nome e sobrenome</label>
-      <input type="text" id="nomesobrenome" class="input-padrao" required />
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" class="input-padrao" placeholder="seuemail@dominio.com" required />
+		<main>
+			<form>
+				<label for="nomesobrenome">Nome e sobrenome</label>
+				<input type="text" id="nomesobrenome" class="input-padrao" required>
 
-      <label for="telefone">Telefone</label>
-      <input type="tel" id="telefone" class="input-padrao" placeholder="(XX) XXXXX-XXXX" required />
+				<label for="email">Email</label>
+				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
-      <label for="mensagem">Mensagem</label>
-      <textarea name="" id="mensagem" cols="30" rows="10" class="input-padrao" required></textarea>
+				<label for="telefone">Telefone</label>
+				<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
-      <fieldset>
-        <legend>Como prefere nosso contato?</legend>
-        <label for="radio-email"><input type="radio" value="email" name="contato" id="radio-email" checked />
-          Email</label>
+				<label for="mensagem">Mensagem</label>
+				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
-        <label for="radio-telefone"><input type="radio" value="telefone" name="contato"
-            id="radio-telefone" />Tefefone</label>
+				<fieldset>
+					<legend>Como prefere o nosso contato?</legend>
+					<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email"> Email</label>
+					
+					<label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone"> Telefone</label>
+					
+					<label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked> WhatsApp</label>
+				</fieldset>
 
+				<fieldset>
+					<legend>Qual horário prefere ser atendido?</legend>
+					<select>
+						<option>Manhã</option>
+						<option>Tarde</option>
+						<option>Noite</option>
+					</select>
+				</fieldset>
 
-        <label for="radio-whatsapp"><input type="radio" value="whatsapp" name="contato"
-            id="radio-whatsapp" />Whatsapp</label>
+				<label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
 
-      </fieldset>
+				<input type="submit" value="Enviar formulário" class="enviar">
+			</form>
 
-      <fieldset>
-        <legend>Qual horario prefere ser atendido?</legend>
-        <select name="" id="">
-          <option value="">Manhã</option>
-          <option value="">Tarde</option>
-          <option value="">Noite</option>
-        </select>
-      </fieldset>
+			<table>
+				<tr>
+					<td>Dia</td>
+					<td>Horário</td>
+				</tr>
+				<tr>
+					<td>Segunda</td>
+					<td>8h ~ 20h</td>
+				</tr>
+				<tr>
+					<td>Quarta</td>
+					<td>8h ~ 20h</td>
+				</tr>
+				<tr>
+					<td>Sexta</td>
+					<td>8h ~ 20h</td>
+				</tr>
+			</table>
+		</main>
 
-      <label class="checkbox">
-        <input type="checkbox" checked />Gostaria de receber nossas novidades por
-        email?
-      </label>
-      <input type="submit" value="Enviar formulário" class="enviar" />
-    </form>
-
-    <!--A criar uma tabela HTML
-        A tag table, que representa a tabela
-        A tag tr, que representa a linha da tabela
-        A tag td, que representa a célula da tabela
-        A tag thead, que representa o cabeçalho da tabela
-        A tag tbody, que representa o corpo da tabela
-        A tag th, que representa a célula do cabeçalho da tabela
-        A tag tfoot, que representa o rodapé da tabela
-        A estilizar a tabela -->
-
-    <table>
-      <thead>
-        <tr>
-          <th>Dia</th>
-          <th>horario</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>segunda</td>
-          <td>dia inteiro</td>
-        </tr>
-        <tr>
-          <td>quarta</td>
-          <td>dia inteiro</td>
-        </tr>
-        <tr>
-          <td>sexta</td>
-          <td>dia inteiro</td>
-        </tr>
-      </tbody>
-    </table>
-
-  </main>
-  <footer>
-    <img src="img/logo-branco.png" alt="logo footer" />
-    <p>&copy Barbearia Alura - 2022</p>
-  </footer>
-</body>
-
+		<footer>
+			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
+	</body>
 </html>
